# Data-to-Text

./: .gitignore  AGENT_CONTEXT.md  Data-to-Text.md  README.md  deploy_commands.sh  main.py  pyproject.toml  requirements.txt  项目交接文档.md
prompts/: intent_recognition.txt  system_report.txt
scripts/: deploy_to_autodl.py  evaluate_cloud.py  finetune_cloud.py  inference_cloud.py  optimize_training_data.py
src/: cli.py  config.py
src/agent/: __init__.py  context.py  fact_checker.py  generator.py  intent.py  llm_client.py  query.py  statistics.py
src/data/: __init__.py  dictionary.py  loader.py  models.py  utils.py
src/report/: __init__.py  charts.py  converter.py  template.py
src/training/: __init__.py  evaluate.py  finetune_cloud.py  prepare_data.py  shared.py  test_inference_cloud.py
tests/: test_context.py  test_fact_checker.py  test_generator.py  test_intent.py  test_loader.py  test_query.py  test_statistics.py
training_data/: training_data.jsonl  training_data_formatted.jsonl
