[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data-to-text"
version = "0.1.0"
description = "食品安全抽检报告自动生成系统 — 基于 Agent + LLM 架构"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "python-docx>=1.1.0",
    "matplotlib>=3.8.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
finetune = [
    "transformers",
    "peft",
    "datasets",
    "accelerate",
    "bitsandbytes",
    "torch>=2.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov",
]

[project.scripts]
d2t = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]